fix hiding overflow in selectInput
chnaged overflow value

--- a/inst/HaDeX/www/HaDeX_theme.css
+++ b/inst/HaDeX/www/HaDeX_theme.css
@@ -368,3 +368,7 @@ h4, .h4 {
   color: #FFFEFD !important;
   background-color: #776274 !important;
 }
+
+.shiny-split-layout > div {
+  overflow: visible;
+}
